# galtinn

./: .gitignore  .gitlab-ci.yml  .landscape.yml  .pre-commit-config.yaml  .pyup.yml  .rumdl.toml  .travis.yml  .yamllint.yaml  AGENTS.md  Pipfile  README.md  circle.yml  docker-compose.yml  fabfile.py  manage.py  mise.toml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  runtests.sh  schema.graphql
.circleci/: config.yml
.gitea/workflows/: ci.yaml  deploy.yaml  pre-commit.yaml  prek.yaml  tests.yaml
apps/common/: apps.py  mixins.py  utils.py
apps/common/templatetags/: google_analytics.py
apps/hooks/: models.py
apps/hooks/migrations/: 0001_initial.py
apps/inside/: admin.py  models.py  tests.py  utils.py
apps/kassa/: admin.py  apps.py  models.py  utils.py
apps/mailchimp/: __init__.py  admin.py  api.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/mailchimp/fixtures/: mailchimp.json
apps/mailchimp/migrations/: 0001_initial.py  0002_auto_20170801_0012.py  0003_auto_20170801_0053.py  0004_auto_20170803_1607.py
apps/mailman/: __init__.py  api.py  apps.py  tasks.py  tests.py  urls.py  views.py
apps/neuf_auth/: admin.py  apps.py  forms.py  models.py  ssh.py  tests.py  validators.py  views.py
apps/neuf_auth/migrations/: 0001_initial.py  0002_auto_20170803_1607.py  0003_authprofile_username_updated.py  0003_username_updated.py  0004_auto_20170814_1538.py  0005_auto_20170814_2046.py
apps/neuf_ldap/: admin.py  apps.py  models.py  utils.py
apps/neuf_ldap/tests/: testdata.ldif
apps/stripe/: views.py
apps/tekstmelding/: admin.py  apps.py  models.py
docs/: Makefile  api.rst  conf.py  index.rst  user.rst
docs/agents/: 2026-03-13-replace-jquery-with-vanilla-js.md  2026-03-16-plan-reactRadixUIMigration.prompt.md
dusken/: __init__.py  admin.py  apps.py  authentication.py  autocompletes.py  celery.py  context_processors.py  fetch_git_sha.py  forms.py  hashers.py  managers.py  models.py  router.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py  wsgi.py  zip_to_city.py
dusken/api/: auth.py  graphql.py  oauth_validators.py  serializers.py  types.py  urls.py  views.py
dusken/api/serializers/: cards.py  flatpages.py  groupprofiles.py  groups.py  membership_types.py  memberships.py  orders.py  orgunits.py  users.py
dusken/api/views/: __init__.py  auth.py  cards.py  checkouts.py  discord.py  flatpages.py  groupprofiles.py  groups.py  membership_types.py  memberships.py  orders.py  orgunits.py  profile.py  session.py  stats.py  stripe_mixin.py  users.py  validate.py  volunteer.py
dusken/apps/common/: apps.py
dusken/apps/kassa/: admin.py  apps.py  models.py  utils.py
dusken/apps/mailchimp/: admin.py  api.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  utils.py  views.py
dusken/apps/mailman/: api.py  apps.py  tasks.py  tests.py  urls.py  views.py
dusken/apps/neuf_auth/: admin.py  apps.py  forms.py  models.py  ssh.py  tests.py  views.py
dusken/fixtures/: testdata.json
dusken/migrations/: 0001_initial.py  0001_squashed_0052_auto_20170920_2149.py  0002_auto_20150902_2040.py  0002_auto_20171117_1410.py  0002_auto_20171123_0028.py  0002_remove_orgunit_members.py  0003_auto_20150905_1858.py  0003_remove_orgunit_phone_number.py  0004_auto_20150906_1409.py  0004_auto_20220723_1346.py  0005_auto_20150906_1504.py  0005_duskenuser_discord_id.py  0006_auto_20150906_1559.py  0006_discord.py  0006_orgunit_discord_role.py  0007_alter_groupdiscordrole_discord_id_and_more.py  0007_auto_20150906_1750.py  0007_rename_discord_role_orgunit_discord_role_id.py  0008_auto_20160323_1753.py  0008_groupprofile_discord_role_id.py  0008_membershiptype_stripe_price_id.py  0009_membership_extra_data.py  0009_order_payment_source_stripepayment.py  0009_remove_orgunit_discord_role_id.py  0010_membercard.py  0010_membershiptype_order.py  0011_duskenuser_phone_number_validated.py  0012_auto_20160328_1952.py  0013_payment_uuid.py  0014_auto_20160409_1453.py  0015_orgunit_slug.py  0016_auto_20160417_1847.py  0017_auto_20160924_2237.py  0018_auto_20160924_2333.py  0019_auto_20160925_0006.py  0020_auto_20160925_0006.py  0021_membershiptype_duration.py  0022_auto_20160925_0113.py  0023_auto_20160925_0133.py  0024_delete_tokens.py  (+28 more)
dusken/models/: __init__.py  logs.py  orders.py  users.py
dusken/settings/: base.py  dev.py  prod.py
dusken/static/: bower.json  gulpfile.babel.js  package-lock.json  package.json  postcss.config.js  schema.json  webpack.config.js
dusken/templates/: 404.html  500.html  base.html  footer.html  home.html  index.html  nav.html  profile.html
dusken/templatetags/: mobile_app.py  pages.py  user.py
dusken/tests/: conftest.py  test_autocomplete.py  test_card.py  test_checkouts.py  test_hasher.py  test_membership.py  test_user.py  test_volunteer.py
dusken/views/: email.py  general.py  membership.py  mixins.py  orgunit.py  user.py  validate.py  validation.py
dusken_api/: __init__.py  admin.py  apps.py  signals.py  urls.py
dusken_api/models/: __init__.py  address.py  associations.py  base_model.py  member.py  membership.py  models.py  orgunit.py  payment.py  place_of_study.py  service_hooks.py  user.py
dusken_api/serializers/: __init__.py  member.py  membership.py  user.py
dusken_api/tests/: test_membership.py  test_user.py
dusken_api/views/: __init__.py  member.py  membership.py  user.py
dusken_site/: settings-sample.py  settings.py  urls.py  wsgi.py
duskensite/: celery.py  router.py  settings.py  urls.py  wsgi.py
duskensite/settings/: base.py  dev.py  prod.py
fixtures/: testdata.json
frontend/: .eslintrc  .eslintrc.json  eslint.config.mjs  package-lock.json  package.json  postcss.config.js  rspack.config.js  webpack.config.js
frontend/app/: OrgUnit.js  index.js  stats.js
hooks/: models.py  views.py
scripts/: import_users.php
stripe/: api.py  views.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
(+155 files in other folders)
