[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "duskensite.settings.dev"

[tool.black]
line-length = 120
target_version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "galtinn"
version = "0.1.0"
description = ""
authors = ["EDB <edb@neuf.no>"]
license = "MIT"

[tool.poetry.dependencies]
argon2-cffi = "21.3.*"
celery = "5.2.*"
coreapi = "2.3.*"
dj-database-url = "0.5.*"
Django = "3.2.*"
django-bootstrap5 = "21.3"
django-countries = "7.3.*"
django-extensions = "3.2.*"
django-filter = "22.1"
django-inline-svg = "0.1.*"
django-ldapdb = "1.5.*"
django-mptt = "0.13.*"
django-phonenumber-field = "6.3.*"
django-recaptcha = "3.0.*"
django-redis = "5.2.*"
django-select2 = "7.10.*"
django-signal-disabler = "0.1.*"
djangorestframework = "3.13.*"
gunicorn = "20.1.*"
Markdown = "3.4.*"
mysqlclient = "2.1.*"
passlib = "1.7.*"
phonenumbers = "8.12.*"
psycopg2 = "2.9.*"
python = "~3.8"
redis = "4.3.*"
requests = "2.28.*"
sentry-sdk = "1.7.*"
stripe = "3.5.*"
strawberry-graphql = "0.119.*"
strawberry-graphql-django = "0.4.*"

[tool.poetry.dev-dependencies]
black = "22.6.0"
codecov = "2.1.*"
isort = "*"
pre-commit = "*"
pycln = "2.0.*"
pytest = "*"
pytest-cov = "^3.0.0"
pytest-django = "*"
pyupgrade = "^2.37.2"
requests-mock = "1.9.*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
