[project]
name = "dusken"
version = "0.1.0"
description = ""
authors = [{ name = "EDB", email = "edb@neuf.no" }]
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "argon2-cffi==23.1.*",
    "celery==5.5.*",
    "dj-database-url==2.3.*",
    "Django==5.2.*",
    "django-bootstrap5==25.*",
    "django-countries==7.6.*",
    "django-extensions==4.1.*",
    "django-filter==25.1",
    "django-inline-svg==0.1.*",
    "django-ldapdb",
    "django-mptt==0.17.*",
    "django-oauth-toolkit==3.*",
    "django-phonenumber-field==8.*",
    "django-recaptcha==4.*",
    "django-redis==5.4.*",
    "django-select2==8.4.*",
    "django-signal-disabler==0.1.*",
    "djangorestframework==3.16.*",
    "fabric==3.*",
    "gunicorn==23.*",
    "Markdown==3.8.*",
    "mysqlclient==2.*",
    "passlib==1.7.*",
    "phonenumbers==9.*",
    "psycopg==3.2.*",
    "redis==5.*",
    "requests==2.32.*",
    "sentry-sdk==2.32.*",
    "strawberry-graphql==0.266.*",
    "strawberry-graphql-django==0.59.*",
    "stripe==12.*",
]

[dependency-groups]
dev = [
    "celery-types==0.13.*",
    "django-stubs[compatible-mypy]>=4.2.0,<5",
    "django-upgrade",
    "djangorestframework-stubs[compatible-mypy]>=3.14.0,<4",
    "mypy==1.2.*",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-socket",
    "requests-mock",
    "ruff==0.11.7",
    "types-requests==2.*",
    "types-stripe>=3.5.0,<4",
]

[tool.uv.sources]
django-ldapdb = { git = "https://github.com/nikolaik/django-ldapdb", rev = "nikolaik/django-42" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dusken.settings.dev"
addopts = "--disable-socket"

[tool.coverage.run]
omit = [
    "dusken/migrations/*",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",               # pydocstyle: Allow undocumented code
  "ANN",             # flake8-annotations: Allow untyped code
  "TD", "FIX",       # Allow TODOs and FIXMEs
  "RUF012",          # FIXME: Fix later https://docs.astral.sh/ruff/rules/mutable-class-default/
  "FBT002",          # Allow boolean args
  "G004",            # Allow logging using f-string
  "EM101", "EM102",  # Allow string in exceptions (prioritice code readability vs exception time readability)
  "TRY003",          # Allow long exception messages
  "E501",            # Allow long lines
  "PGH003",          # FIXME: Improve typing
  "COM812", "ISC001" # Avoid conflicting with ruff formatter
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
# Testing code can deviate a bit more
"dusken/tests/*.py" = ["S101", "S106", "PLR2004"]
"**/test_*.py" = ["S101", "S106", "PLR2004"]
"**/tests.py" = ["S101", "S106", "PLR2004"]
"dusken/apps/tekstmelding/models.py" = ["DJ001"]  # This is autogenerated

[tool.mypy]
disable_error_code = "annotation-unchecked"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main", "strawberry.ext.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "django_recaptcha.*",
    "dj_database_url.*",
    "django_filters.*",
    "django_select2.*",
    "fabric.*",
    "ldapdb.*",
    "mptt.*",
    "oauth2_provider.*",
    "passlib.*",
    "phonenumber_field.*",
    "dusken.settings.local",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "dusken.settings.dev"
